# ProMentor-server

./: .gitignore  DEV.md  README.md  fix-staging.sh
infra/: docker-compose.yml
infra/prometheus/: prometheus.yml
services/auth-service/: .air.toml  Dockerfile  go.mod  go.sum
services/auth-service/migrations/: 00001_create_users_table.go  00002_create_sessions_table.go  00003_create_session_participants_table.go  00004_create_refresh_tokens_table.go  00005_add_avatar_url_to_users.go  00006_create_user_device_tokens.go  (+3 more)
services/bff-service/: .air.toml  Dockerfile  go.mod  go.sum
services/notification-worker/: Dockerfile  go.mod  go.sum  main.go
services/realtime-service/: Cargo.toml  Dockerfile
services/realtime-service/benches/: session_manager_bench.rs
services/realtime-service/src/: main.rs
services/realtime-service/src/api/: ws_handler.rs
services/realtime-service/src/auth/: jwt.rs
services/realtime-service/src/events/: mod.rs  nats_listener.rs  nats_publisher.rs
services/realtime-service/src/middleware/: metrics.rs
services/realtime-service/src/model/: chat_message.rs
services/realtime-service/src/services/: session_manager.rs
services/realtime-service/tests/e2e/: full_flow_test.rs  security_tests.rs
services/realtime-service/tests/helpers/: mock_nats.rs  mod.rs
services/realtime-service/tests/integration/: nats_integration_tests.rs  websocket_integration_tests.rs
services/realtime-service/tests/unit/: model_tests.rs  session_manager_test.rs  ws_handler_tests.rs
services/user-service/: .air.toml  Dockerfile  go.mod  go.sum
(+46 files in other folders)
