[package]
name = "realtime-service"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-nats = "0.35"
futures = "0.3"
uuid = { version = "1.8", features = ["v4", "serde"] }
dotenvy = "0.15"
rand = "0.8"
actix-web-actors = "4.3.1"
actix-ws = "0.3.0"
futures-util = "0.3.31"
jsonwebtoken = "9.3"
prometheus = { version = "0.14.0", features = ["process", "process-collector"] }
lazy_static = "1.5.0"

[dev-dependencies]
# Testing frameworks
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"

# WebSocket testing
tokio-tungstenite = "0.21"
tungstenite = "0.21"

# Property-based testing
proptest = "1.4"
quickcheck = "1.0"
quickcheck_macros = "1.0"

# Load testing utilities
criterion = { version = "0.5", features = ["async_tokio"] }

# Test utilities
rstest = "0.18"
serial_test = "3.0"
temp-env = "0.3"
fake = { version = "2.9", features = ["derive", "uuid"] }

# Assertion helpers
assert_matches = "1.5"
pretty_assertions = "1.4"

# Test coverage
test-case = "3.3"

[profile.test]
opt-level = 1

# [[bench]]
# name = "session_manager_bench"
# harness = false

# [[bench]]
# name = "ws_handler_bench"
# harness = false